fixed the issue of all elements not in center with too much space on the right

--- a/style.css
+++ b/style.css
@@ -1,19 +1,15 @@
 body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   color: #777;
-  background: pink;
+  background: #777;
   width: 960px;
   font-size: 18px;
+  margin: 0 auto;
   text-align: center;
 }
    
 header, nav, section, aside, footer {
   background: #ebebeb;
-}
-   
-article {
-  color: #ebebeb;
-  background: #777;
 }
    
 h1, p {
@@ -22,16 +18,13 @@ h1, p {
 }
    
 header {
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-top: 10px;
   margin-bottom: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
 nav {
-  margin-left: 100px;
-  margin-right: 100px;
   padding-top: 20px;
   padding-bottom: 20px;
   margin-bottom: 20px;
@@ -39,12 +32,13 @@ nav {
 
 section {
   width: 495px;
-  margin-left: 100px;
   padding-top: 1px;
   padding-bottom: 10px;
 }
 
 article {
+  color: #ebebeb;
+  background: #777;
   margin-left: 10px;
   margin-right: 10px;
   padding-top: 1px;
@@ -62,21 +56,18 @@ h1 {
 p {
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-top: 0;
   margin-left: 10px;
   margin-right: 10px;
+  margin-top: 0;
 }
 
 aside {
   float: right;
-  margin-right: 100px;
-  width: 245px;
+  width: 445px;
   height: 259px;
 }
 
 footer {
-  margin-left: 100px;
-  margin-right: 100px;
   margin-top: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
